# IS2_Proyecto_pruebas

./: .env  .gitignore  Jenkinsfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  sonar-project.properties
backend/: app.py  auth_service.py  denuncia_service.py  pyproject.toml
backend/app/: main.py
backend/app/application/use_cases/: crear_publicacion.py  create_denuncia.py  editar_publicacion.py  eliminar_publicacion.py  eliminar_reaccion.py  login_user.py  obtener_publicaciones.py  reaccionar_publicacion.py  register_user.py
backend/app/config/: database.py  settings.py
backend/app/domain/exceptions/: user_exceptions.py
backend/app/domain/models/: denuncia.py  user.py
backend/app/domain/repositories/: denuncia_repo.py  publicacion_repo.py  reaccion_repo.py  user_repo.py
backend/app/domain/services/: password_service.py
backend/app/domain/users/: user_repository.py
backend/app/infrastructure/database/: denuncia_document.py  denuncia_repo_impl.py  publicacion_document.py  publicacion_repo_impl.py  reaccion_document.py  reaccion_repo_impl.py  user_document.py  (+1 more)
backend/app/shared/: constants.py  utils.py
backend/tests/: test_login_user_unittest.py  test_password_service_unittest.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AuthModal.jsx  Header.jsx
frontend/src/pages/: DenunciaPage.jsx  HomePage.jsx
frontend/src/routes/: Routes.jsx
frontend/src/services/: api.js
tests/: test_create_denuncia_use_case.py  test_login_user.py  test_register_user_use_case.py
(+8 files in other folders)
